src-tauri/tests/trybuild/private_analysis_domain.stderr
error[E0603]: module `domain` is private
 --> tests/trybuild/private_analysis_domain.rs:1:30
  |
1 | use app::contexts::analysis::domain::Job;
  |                              ^^^^^^ private module
  |
note: the module `domain` is defined here
 --> src/contexts/analysis/mod.rs
  |
  | mod domain;
  | ^^^^^^^^^^
