src-tauri/tests/trybuild/private_analysis_domain.rs
use app::contexts::analysis::domain::Job;

fn main() {
    let _ = std::mem::size_of::<Job>();
}